<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:paddingTop="12dp">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment_activity_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/nav_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/mobile_navigation" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="137dp"
        android:layout_height="132dp"
        tools:layout_editor_absoluteX="220dp"
        tools:layout_editor_absoluteY="136dp"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="137dp"
        android:layout_height="132dp"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="453dp"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="137dp"
        android:layout_height="132dp"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="136dp"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="137dp"
        android:layout_height="132dp"
        tools:layout_editor_absoluteX="220dp"
        tools:layout_editor_absoluteY="453dp"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cpe02"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="241dp"
        tools:layout_editor_absoluteY="562dp" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="137dp"
        android:layout_height="132dp"
        tools:layout_editor_absoluteX="220dp"
        tools:layout_editor_absoluteY="299dp"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cpe01"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="562dp" />

    <TextView
        android:id="@id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cs02"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="249dp"
        tools:layout_editor_absoluteY="245dp" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="137dp"
        android:layout_height="132dp"
        android:contentDescription="@string/img_but"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.507"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@id/textView2"
        style="@style/BoldText"
        android:layout_width="412dp"
        android:layout_height="32dp"
        android:layout_marginTop="60dp"
        android:background="#000080"
        android:paddingTop="6dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/notificationBell"
        android:layout_width="22dp"
        android:layout_height="20dp"
        android:layout_marginStart="216dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/bell"
        android:src="@drawable/ic_notifications_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        style="@style/BoldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="256dp"
        android:layout_marginTop="20dp"
        android:text="@string/name"
        android:textAllCaps="true"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="59dp"
        android:layout_height="57dp"
        android:layout_marginStart="4dp"
        android:src="@drawable/sti_logo"
        android:contentDescription="@string/sti_logo"
        tools:layout_editor_absoluteY="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cs01"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="93dp"
        tools:layout_editor_absoluteY="245dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="58dp"
        android:layout_height="20dp"
        android:text="@string/it01"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="410dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="62dp"
        android:layout_height="24dp"
        android:text="@string/it02"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="256dp"
        tools:layout_editor_absoluteY="406dp" />


</androidx.constraintlayout.widget.ConstraintLayout>