<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".exam_taken">


    <TextView
        android:id="@+id/textView2"
        style="@style/BoldText"
        android:layout_width="419dp"
        android:layout_height="32dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/round_corner_2"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:paddingTop="6dp"
        android:text="@string/stud"
        android:textAllCaps="true"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@id/textView2"
        style="@style/BoldText"
        android:layout_width="412dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="#000080"
        android:paddingTop="6dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="59dp"
        android:layout_height="57dp"
        android:layout_marginStart="4dp"
        android:src="@drawable/sti_logo"
        android:contentDescription="@string/sti_logo"
        tools:layout_editor_absoluteY="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/notificationBell"
        android:layout_width="22dp"
        android:layout_height="20dp"
        android:layout_marginStart="216dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/bell"
        android:src="@drawable/ic_notifications_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        style="@style/BoldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="256dp"
        android:layout_marginTop="20dp"
        android:text="@string/name"
        android:textAllCaps="true"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>