<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".scanner_page">

    <Button
        android:id="@+id/button"
        style="@style/BoldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#000080"
        android:fontFamily="@font/koulen_reg"
        android:text="@string/scan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.941" />

    <TextView
        android:id="@+id/textView2"
        style="@style/BoldText"
        android:layout_width="411dp"
        android:layout_height="41dp"
        android:background="#000080"
        android:fontFamily="@font/koulen_reg"
        android:paddingBottom="2dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="26sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="60dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="113dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="59dp"
        android:layout_height="57dp"
        android:layout_marginStart="4dp"
        android:src="@drawable/sti_logo"
        android:contentDescription="@string/sti_logo"
        tools:layout_editor_absoluteY="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/notificationBell"
        android:layout_width="22dp"
        android:layout_height="20dp"
        android:layout_marginStart="224dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/bell"
        android:src="@drawable/ic_notifications_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        style="@style/BoldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAllCaps="true"
        android:textColor="@color/black"
        tools:layout_editor_absoluteX="249dp"
        tools:layout_editor_absoluteY="21dp"
        tools:ignore="MissingConstraints" />




</androidx.constraintlayout.widget.ConstraintLayout>